--- a/app/Makefile
+++ b/app/Makefile
@@ -8,11 +8,11 @@ SHELL := /bin/bash
 
 all: clean
 	make html js css
-	babel dist/script.js --presets=env | uglifyjs -o dist/script.js -c -m
+	babel dist/index.js --presets=env | uglifyjs -o dist/index.js -c -m
 	postcss dist/style.css -u autoprefixer -o dist/style.css -m
 	cleancss dist/style.css -o dist/style.css --source-map --source-map-inline-sources
 	html-minifier --collapse-whitespace dist/index.html -o dist/index.html
-	rm dist/script.js.map dist/style.css.map
+	rm dist/index.js.map dist/style.css.map
 
 clean:
 	rm -rf dist
@@ -22,7 +22,7 @@ html:
 	cp src/index.html dist/index.html
 
 js:
-	rollup src/script.js -o dist/script.js -f iife -c -m
+	rollup src/index.js -o dist/index.js -f iife -c -m
 
 css:
 	node-sass src/style.scss -o dist --source-map true --source-map-contents
